@@ -1,4 +1,5 @@
 Kiwix 0.9 alpha1
+* Autodection of the UI locale at the first start
 * New "Recently open" menu
 * Introduction of the library
 * Use xapian-core-1.0.16
